fix search input field compability with jump box plugin

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -23,13 +23,13 @@ a:hover{
 }
 /* TOOLBAR */
 #toolbar{
-  background-color:#CCCCCC;
+  //background-color:#CCCCCC;
   display:block;
   height:30px;
   overflow:hidden;
   position:relative;
   width:100%;
-  box-shadow: 0 3px 4px #A0A0A0;
+  //box-shadow: 0 3px 4px #A0A0A0;
   z-index:1000;
 }
 #toolbar .breadcrumbs{
@@ -51,7 +51,7 @@ a:hover{
   position:relative;
 }
 #toolbar .links{
-  bottom:5px;
+  //bottom:5px;
   display:block;
   right:10px;
   position:absolute;
